--- a/app/src/main/res/layout/fragment_mediabuttomsheet.xml
+++ b/app/src/main/res/layout/fragment_mediabuttomsheet.xml
@@ -21,7 +21,7 @@
             android:layout_marginBottom="8dp"
             android:text="複製檔案"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
             android:layout_marginBottom="8dp"
             android:text="刪除檔案"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
